--- a/public/css file/style1.0.css
+++ b/public/css file/style1.0.css
@@ -649,6 +649,12 @@ h3.my-profession
     max-width: 100%;
     margin-bottom: 40px;
 }
+.portfolio .text p
+{
+    font-size: 16px;
+    line-height: 25px;
+    color: var(--text-black-700);
+}
 .portfolio .portfolio-heading h2
 {
     color: var(--text-black-900);
