--- a/public/css file/style1.0.css
+++ b/public/css file/style1.0.css
@@ -143,6 +143,7 @@ ul
     font-size: 16px;
     font-weight: 500;
     padding: 12px 35px;
+    margin-right: 15px;
     color: white;
     border-radius: 40px;
     display: inline-block;
